syntax = "proto3";

package v1;

import "api/v1/empty.proto";
import weak "google/api/annotations.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";

message SummaryCountsResponse {
  int64 num_alerts = 1;
  int64 num_clusters = 2;
  int64 num_deployments = 3;
  int64 num_images = 4;
  int64 num_secrets = 5;
  int64 num_nodes = 6;
}

service SummaryService {
  rpc GetSummaryCounts(Empty) returns (SummaryCountsResponse) {
    option (google.api.http) = {get: "/v1/summary/counts"};
  }
}
